--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -33,9 +33,15 @@
     </div>
     <div class="form-group">
         <label>Number of Attendees
-            <input th:field="${event.numberOfAttendees}" class="form-control">
+            <input type="number" th:field="${event.numberOfAttendees}" class="form-control">
         </label>
         <p class="error" th:errors="${event.numberOfAttendees}"></p>
+    </div>
+    <div class="form-group">
+        <label>Registration Required
+            <input type="checkbox" th:field="${event.registrationRequired}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.registrationRequired}"></p>
     </div>
 
     <div class="form-group">
