--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -12,6 +12,9 @@
             <th>Name</th>
             <th>Description</th>
             <th>Contact Email</th>
+            <th>Location</th>
+            <th>Number of Attendees</th>
+            <th>Registration Required</th>
         </tr>
     </thead>
     <tr th:each="event : ${events}">
@@ -19,6 +22,9 @@
         <td th:text="${event.name}"></td>
         <td th:text="${event.description}"></td>
         <td th:text="${event.contactEmail}"></td>
+        <td th:text="${event.location}"></td>
+        <td th:text="${event.numberOfAttendees}"></td>
+        <td th:text="${event.registrationRequired}"></td>
     </tr>
 </table>
 
