--- a/src/main/resources/templates/tags/index.html
+++ b/src/main/resources/templates/tags/index.html
@@ -12,7 +12,7 @@
     </tr>
     </thead>
     <tr th:each="tag : ${tags}">
-        <td th:text="${tag.displayName}"></td>
+        <td th:text="${tag.displayName}" th:href="'/events?tagId=' + ${tag.id}"></td>
     </tr>
 
 </table>
